--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "create-express-api",
   "version": "1.0.0",
   "description": "An Express REST API boilerplate",
-  "main": "index.js",
+  "main": "src/index.ts",
   "author": "Adnan Iqbal Khan",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "nodemon index.js localhost 8080",
-    "dev": "node index.js",
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
     "test": "jest",
     "swagger": "node swagger.js"
   },
@@ -42,12 +43,19 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "ts-json-schema-generator": "^1.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.18",
+    "@types/swagger-ui-express": "^4.1.3",
+    "concurrently": "^7.3.0",
     "jest": "^29.0.1",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4",
-    "swagger-autogen": "^2.21.5"
+    "swagger-autogen": "^2.21.5",
+    "typescript": "^4.8.2"
   }
 }
